Fixing master