@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.conf;
 
@@ -49,8 +51,8 @@ import org.slf4j.LoggerFactory;
 public class IterConfigUtil {
   private static final Logger log = LoggerFactory.getLogger(IterConfigUtil.class);
 
-  public static final Comparator<IterInfo> ITER_INFO_COMPARATOR = Comparator
-      .comparingInt(IterInfo::getPriority);
+  public static final Comparator<IterInfo> ITER_INFO_COMPARATOR =
+      Comparator.comparingInt(IterInfo::getPriority);
 
   /**
    * Fetch the correct configuration key prefix for the given scope. Throws an
@@ -114,20 +116,14 @@ public class IterConfigUtil {
         String iterName = suffixSplit[0];
         String optName = suffixSplit[2];
 
-        Map<String,String> options = allOptions.get(iterName);
-        if (options == null) {
-          options = new HashMap<>();
-          allOptions.put(iterName, options);
-        }
-
-        options.put(optName, entry.getValue());
+        allOptions.computeIfAbsent(iterName, k -> new HashMap<>()).put(optName, entry.getValue());
 
       } else {
         throw new IllegalArgumentException("Invalid iterator format: " + entry.getKey());
       }
     }
 
-    Collections.sort(iterators, ITER_INFO_COMPARATOR);
+    iterators.sort(ITER_INFO_COMPARATOR);
     return iterators;
   }
 
@@ -137,7 +133,7 @@ public class IterConfigUtil {
       Map<String,Map<String,String>> ssio) {
     destList.addAll(tableIters);
     destList.addAll(ssi);
-    Collections.sort(destList, ITER_INFO_COMPARATOR);
+    destList.sort(ITER_INFO_COMPARATOR);
 
     Set<Entry<String,Map<String,String>>> es = tableOpts.entrySet();
     for (Entry<String,Map<String,String>> entry : es) {
@@ -217,7 +213,7 @@ public class IterConfigUtil {
           clazz = loadClass(iterLoad.useAccumuloClassLoader, iterLoad.context, iterInfo);
         }
 
-        SortedKeyValueIterator<Key,Value> skvi = clazz.newInstance();
+        SortedKeyValueIterator<Key,Value> skvi = clazz.getDeclaredConstructor().newInstance();
 
         Map<String,String> options = iterLoad.iterOpts.get(iterInfo.iterName);
 
@@ -227,7 +223,7 @@ public class IterConfigUtil {
         skvi.init(prev, options, iterLoad.iteratorEnvironment);
         prev = skvi;
       }
-    } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+    } catch (ReflectiveOperationException e) {
       log.error(e.toString());
       throw new RuntimeException(e);
     }
@@ -240,9 +236,9 @@ public class IterConfigUtil {
     Class<SortedKeyValueIterator<Key,Value>> clazz;
     if (useAccumuloClassLoader) {
       if (context != null && !context.equals("")) {
-        clazz = (Class<SortedKeyValueIterator<Key,Value>>) AccumuloVFSClassLoader
-            .getContextManager()
-            .loadClass(context, iterInfo.className, SortedKeyValueIterator.class);
+        clazz =
+            (Class<SortedKeyValueIterator<Key,Value>>) AccumuloVFSClassLoader.getContextManager()
+                .loadClass(context, iterInfo.className, SortedKeyValueIterator.class);
         log.trace("Iterator class {} loaded from context {}, classloader: {}", iterInfo.className,
             context, clazz.getClassLoader());
       } else {
