@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.iterators.user;
 
@@ -54,10 +56,10 @@ public abstract class SeekingFilter extends WrappingIterator {
   }
 
   public static class FilterResult {
-    private static final EnumMap<AdvanceResult,FilterResult> PASSES = new EnumMap<>(
-        AdvanceResult.class);
-    private static final EnumMap<AdvanceResult,FilterResult> FAILS = new EnumMap<>(
-        AdvanceResult.class);
+    private static final EnumMap<AdvanceResult,FilterResult> PASSES =
+        new EnumMap<>(AdvanceResult.class);
+    private static final EnumMap<AdvanceResult,FilterResult> FAILS =
+        new EnumMap<>(AdvanceResult.class);
     static {
       for (AdvanceResult ar : AdvanceResult.values()) {
         PASSES.put(ar, new FilterResult(true, ar));
@@ -153,7 +155,7 @@ public abstract class SeekingFilter extends WrappingIterator {
   public SortedKeyValueIterator<Key,Value> deepCopy(IteratorEnvironment env) {
     SeekingFilter newInstance;
     try {
-      newInstance = this.getClass().newInstance();
+      newInstance = this.getClass().getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
@@ -178,12 +180,12 @@ public abstract class SeekingFilter extends WrappingIterator {
             f.advance == AdvanceResult.USE_HINT ? getNextKeyHint(src.getTopKey(), src.getTopValue())
                 : " (none)");
       }
-      if (f.accept != negate) {
+      if (f.accept == negate) {
+        advanceSource(src, f.advance);
+      } else {
         // advance will be processed when next is called
         advance = f.advance;
         break;
-      } else {
-        advanceSource(src, f.advance);
       }
     }
   }
