@@ -1,24 +1,25 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.util;
 
 import java.io.IOException;
 
-import org.apache.accumulo.core.cli.ClientOpts.Password;
 import org.apache.accumulo.core.cli.ClientOpts.PasswordConverter;
 import org.apache.accumulo.core.cli.Help;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
@@ -50,11 +51,11 @@ public class CreateToken implements KeywordExecutable {
 
     @Parameter(names = "-p", converter = PasswordConverter.class,
         description = "Connection password")
-    public Password password = null;
+    public String password = null;
 
     @Parameter(names = "--password", converter = PasswordConverter.class,
         description = "Enter the connection password", password = true)
-    public Password securePassword = null;
+    public String securePassword = null;
 
     @Parameter(names = {"-tc", "--tokenClass"},
         description = "The class of the authentication token")
@@ -80,7 +81,7 @@ public class CreateToken implements KeywordExecutable {
     Opts opts = new Opts();
     opts.parseArgs("accumulo create-token", args);
 
-    Password pass = opts.password;
+    String pass = opts.password;
     if (pass == null && opts.securePassword != null) {
       pass = opts.securePassword;
     }
@@ -92,12 +93,12 @@ public class CreateToken implements KeywordExecutable {
       }
 
       AuthenticationToken token = Class.forName(opts.tokenClassName)
-          .asSubclass(AuthenticationToken.class).newInstance();
+          .asSubclass(AuthenticationToken.class).getDeclaredConstructor().newInstance();
       Properties props = new Properties();
       for (TokenProperty tp : token.getProperties()) {
         String input;
         if (pass != null && tp.getKey().equals("password")) {
-          input = pass.toString();
+          input = pass;
         } else {
           if (tp.getMask()) {
             input = getConsoleReader().readLine(tp.getDescription() + ": ", '*');
@@ -111,8 +112,7 @@ public class CreateToken implements KeywordExecutable {
       System.out.println("auth.type = " + opts.tokenClassName);
       System.out.println("auth.principal = " + principal);
       System.out.println("auth.token = " + ClientProperty.encodeToken(token));
-    } catch (IOException | InstantiationException | IllegalAccessException
-        | ClassNotFoundException e) {
+    } catch (IOException | ReflectiveOperationException e) {
       throw new RuntimeException(e);
     }
   }
