@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.spi.scan;
 
@@ -27,8 +29,6 @@ import java.util.Map;
 import org.apache.accumulo.core.spi.common.ServiceEnvironment;
 import org.apache.accumulo.core.spi.scan.ScanInfo.Type;
 import org.junit.Test;
-
-import com.google.common.collect.ImmutableMap;
 
 public class HintScanPrioritizerTest {
   @Test
@@ -52,13 +52,13 @@ public class HintScanPrioritizerTest {
 
     Collections.shuffle(scans);
 
-    Comparator<ScanInfo> comparator = new HintScanPrioritizer()
-        .createComparator(new ScanPrioritizer.CreateParameters() {
+    Comparator<ScanInfo> comparator =
+        new HintScanPrioritizer().createComparator(new ScanPrioritizer.CreateParameters() {
 
           @Override
           public Map<String,String> getOptions() {
-            return ImmutableMap.of("priority.isbn", "10", "priority.background", "30",
-                "default_priority", "20");
+            return Map.of("priority.isbn", "10", "priority.background", "30", "default_priority",
+                "20");
           }
 
           @Override
@@ -67,7 +67,7 @@ public class HintScanPrioritizerTest {
           }
         });
 
-    Collections.sort(scans, comparator);
+    scans.sort(comparator);
 
     assertEquals("i", scans.get(0).testId);
     assertEquals("e", scans.get(1).testId);
