@@ -1,20 +1,21 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.apache.accumulo.test;
 
 import static org.junit.Assert.assertEquals;
@@ -59,11 +60,9 @@ import org.junit.After;
 import org.junit.Assume;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
+@SuppressWarnings("removal")
 public class UserCompactionStrategyIT extends AccumuloClusterHarness {
 
   @Override
@@ -95,19 +94,19 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
       writeFlush(c, tableName, "d");
 
       // drop files that start with A
-      CompactionStrategyConfig csConfig = new CompactionStrategyConfig(
-          TestCompactionStrategy.class.getName());
-      csConfig.setOptions(ImmutableMap.of("dropPrefix", "A", "inputPrefix", "F"));
+      CompactionStrategyConfig csConfig =
+          new CompactionStrategyConfig(TestCompactionStrategy.class.getName());
+      csConfig.setOptions(Map.of("dropPrefix", "A", "inputPrefix", "F"));
       c.tableOperations().compact(tableName,
           new CompactionConfig().setWait(true).setCompactionStrategy(csConfig));
 
-      assertEquals(ImmutableSet.of("c", "d"), getRows(c, tableName));
+      assertEquals(Set.of("c", "d"), getRows(c, tableName));
 
       // this compaction should not drop files starting with A
       c.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
       c.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
 
-      assertEquals(ImmutableSet.of("c", "d"), getRows(c, tableName));
+      assertEquals(Set.of("c", "d"), getRows(c, tableName));
     }
   }
 
@@ -121,13 +120,13 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
       writeFlush(c, tableName, "a");
       writeFlush(c, tableName, "b");
 
-      CompactionStrategyConfig csConfig = new CompactionStrategyConfig(
-          TestCompactionStrategy.class.getName());
+      CompactionStrategyConfig csConfig =
+          new CompactionStrategyConfig(TestCompactionStrategy.class.getName());
       csConfig.setOptions(options);
       c.tableOperations().compact(tableName,
           new CompactionConfig().setWait(true).setCompactionStrategy(csConfig));
 
-      assertEquals(ImmutableSet.of("a", "b"), getRows(c, tableName));
+      assertEquals(Set.of("a", "b"), getRows(c, tableName));
     }
   }
 
@@ -136,7 +135,7 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
     // test a compaction strategy that selects no files. In this case there is no work to do, want
     // to ensure it does not hang.
 
-    testDropNone(ImmutableMap.of("inputPrefix", "Z"));
+    testDropNone(Map.of("inputPrefix", "Z"));
   }
 
   @Test
@@ -145,7 +144,7 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
     // shouldCompact() will return true and getCompactionPlan() will
     // return no work to do.
 
-    testDropNone(ImmutableMap.of("inputPrefix", "Z", "shouldCompact", "true"));
+    testDropNone(Map.of("inputPrefix", "Z", "shouldCompact", "true"));
   }
 
   @Test
@@ -177,8 +176,8 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
 
       // EfgCompactionStrat will only compact a tablet w/ end row of 'efg'. No other tablets are
       // compacted.
-      CompactionStrategyConfig csConfig = new CompactionStrategyConfig(
-          "org.apache.accumulo.test.EfgCompactionStrat");
+      CompactionStrategyConfig csConfig =
+          new CompactionStrategyConfig("org.apache.accumulo.test.EfgCompactionStrat");
       c.tableOperations().compact(tableName,
           new CompactionConfig().setWait(true).setCompactionStrategy(csConfig));
 
@@ -218,9 +217,9 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
       assertEquals(3, FunctionalTestUtils.countRFiles(c, tableName));
 
       // drop files that start with A
-      CompactionStrategyConfig csConfig = new CompactionStrategyConfig(
-          TestCompactionStrategy.class.getName());
-      csConfig.setOptions(ImmutableMap.of("inputPrefix", "F"));
+      CompactionStrategyConfig csConfig =
+          new CompactionStrategyConfig(TestCompactionStrategy.class.getName());
+      csConfig.setOptions(Map.of("inputPrefix", "F"));
 
       IteratorSetting iterConf = new IteratorSetting(21, "myregex", RegExFilter.class);
       RegExFilter.setRegexs(iterConf, "a|c", null, null, null, false);
@@ -231,14 +230,14 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
       // compaction strategy should only be applied to one file. If its applied to both, then row
       // 'b'
       // would be dropped by filter.
-      assertEquals(ImmutableSet.of("a", "b", "c"), getRows(c, tableName));
+      assertEquals(Set.of("a", "b", "c"), getRows(c, tableName));
 
       assertEquals(2, FunctionalTestUtils.countRFiles(c, tableName));
 
       c.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
 
       // ensure that iterator is not applied
-      assertEquals(ImmutableSet.of("a", "b", "c"), getRows(c, tableName));
+      assertEquals(Set.of("a", "b", "c"), getRows(c, tableName));
 
       assertEquals(1, FunctionalTestUtils.countRFiles(c, tableName));
     }
@@ -261,16 +260,16 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
 
       assertEquals(5, FunctionalTestUtils.countRFiles(c, tableName));
 
-      CompactionStrategyConfig csConfig = new CompactionStrategyConfig(
-          SizeCompactionStrategy.class.getName());
-      csConfig.setOptions(ImmutableMap.of("size", "" + (1 << 15)));
+      CompactionStrategyConfig csConfig =
+          new CompactionStrategyConfig(SizeCompactionStrategy.class.getName());
+      csConfig.setOptions(Map.of("size", "" + (1 << 15)));
       c.tableOperations().compact(tableName,
           new CompactionConfig().setWait(true).setCompactionStrategy(csConfig));
 
       assertEquals(3, FunctionalTestUtils.countRFiles(c, tableName));
 
       csConfig = new CompactionStrategyConfig(SizeCompactionStrategy.class.getName());
-      csConfig.setOptions(ImmutableMap.of("size", "" + (1 << 17)));
+      csConfig.setOptions(Map.of("size", "" + (1 << 17)));
       c.tableOperations().compact(tableName,
           new CompactionConfig().setWait(true).setCompactionStrategy(csConfig));
 
@@ -308,8 +307,9 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
       try {
         // this compaction should fail because previous one set iterators
         c.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
-        if (System.currentTimeMillis() - t1 < 2000)
+        if (System.currentTimeMillis() - t1 < 2000) {
           fail("Expected compaction to fail because another concurrent compaction set iterators");
+        }
       } catch (AccumuloException e) {}
     }
   }
@@ -331,8 +331,9 @@ public class UserCompactionStrategyIT extends AccumuloClusterHarness {
   private Set<String> getRows(AccumuloClient c, String tableName) throws TableNotFoundException {
     Set<String> rows = new HashSet<>();
     try (Scanner scanner = c.createScanner(tableName, Authorizations.EMPTY)) {
-      for (Entry<Key,Value> entry : scanner)
+      for (Entry<Key,Value> entry : scanner) {
         rows.add(entry.getKey().getRowData().toString());
+      }
     }
     return rows;
   }
