@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test.replication;
 
@@ -58,11 +60,13 @@ import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.Text;
 import org.easymock.EasyMock;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Test;
 
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
 
+@Ignore("Replication ITs are not stable and not currently maintained")
 public class StatusMakerIT extends ConfigurableMacBase {
 
   private AccumuloClient client;
@@ -87,9 +91,9 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     BatchWriter bw = client.createBatchWriter(sourceTable, new BatchWriterConfig());
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
-    Set<String> files = Sets.newHashSet(walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID());
+    Set<String> files =
+        Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
+            walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
     Map<String,Integer> fileToTableId = new HashMap<>();
 
     int index = 1;
@@ -121,7 +125,7 @@ public class StatusMakerIT extends ConfigurableMacBase {
         TableId tableId = StatusSection.getTableId(entry.getKey());
 
         assertTrue("Found unexpected file: " + file, files.contains(file.toString()));
-        assertEquals(fileToTableId.get(file.toString()), new Integer(tableId.canonical()));
+        assertEquals(fileToTableId.get(file.toString()), Integer.valueOf(tableId.canonical()));
         timeCreated = fileToTimeCreated.get(file.toString());
         assertNotNull(timeCreated);
         assertEquals(StatusUtil.fileCreated(timeCreated), Status.parseFrom(entry.getValue().get()));
@@ -137,9 +141,9 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     BatchWriter bw = client.createBatchWriter(sourceTable, new BatchWriterConfig());
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
-    Set<String> files = Sets.newHashSet(walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID());
+    Set<String> files =
+        Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
+            walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
     Map<String,Integer> fileToTableId = new HashMap<>();
 
     int index = 1;
@@ -176,9 +180,9 @@ public class StatusMakerIT extends ConfigurableMacBase {
 
     BatchWriter bw = client.createBatchWriter(sourceTable, new BatchWriterConfig());
     String walPrefix = "hdfs://localhost:8020/accumulo/wals/tserver+port/";
-    Set<String> files = Sets.newHashSet(walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
-        walPrefix + UUID.randomUUID());
+    Set<String> files =
+        Sets.newHashSet(walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID(),
+            walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
     Map<String,Integer> fileToTableId = new HashMap<>();
 
     Status stat = Status.newBuilder().setBegin(0).setEnd(0).setInfiniteEnd(true).setClosed(true)
@@ -227,8 +231,8 @@ public class StatusMakerIT extends ConfigurableMacBase {
         walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
     Map<String,Integer> fileToTableId = new HashMap<>();
 
-    Status.Builder statBuilder = Status.newBuilder().setBegin(0).setEnd(0).setInfiniteEnd(true)
-        .setClosed(true);
+    Status.Builder statBuilder =
+        Status.newBuilder().setBegin(0).setEnd(0).setInfiniteEnd(true).setClosed(true);
 
     int index = 1;
     long time = System.currentTimeMillis();
@@ -289,8 +293,8 @@ public class StatusMakerIT extends ConfigurableMacBase {
         walPrefix + UUID.randomUUID(), walPrefix + UUID.randomUUID());
     Map<String,Long> fileToTableId = new HashMap<>();
 
-    Status.Builder statBuilder = Status.newBuilder().setBegin(0).setEnd(0).setInfiniteEnd(true)
-        .setClosed(true);
+    Status.Builder statBuilder =
+        Status.newBuilder().setBegin(0).setEnd(0).setInfiniteEnd(true).setClosed(true);
 
     Map<String,Long> statuses = new HashMap<>();
     long index = 1;
